discussion/kv_engine/170541/170541_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49512: Remove tasks from custom cpuPool queue on unregister

We just need to clean up the task but we currently do so by
running it, meaning that we must wait for other tasks to
complete first. Instead, remove the tasks from the queue and
tidy them up manually.

Change-Id: Id3f52a07d693d98510ab6b3f918ad4beb1b8721d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-02-11 07:48:57.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-11 08:28:04.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15511/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10: error: "gmock/gmock.h" file not found [clang-diagnostic-error]
#include <gmock/gmock.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15511/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10:
error: "gmock/gmock.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15511/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43817/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0027/0159]: PiTR conf...(1414 ms) OK


99% tests passed, 2 tests failed out of 421

Total Test time (real) = 759.86 sec

The following tests FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43817/ )

Failure of GoogleTest "FullAndvalueEviction/EPBucketTest.GetNonResidentCompressed/persistent_nexus_magma_couchstore_value_only":

<pre>
[ RUN      ] FullAndvalueEviction/EPBucketTest.GetNonResidentCompressed/persistent_nexus_magma_couchstore_value_only
2022-02-11T00:08:29.862697-08:00 CRITICAL NexusKVStoreSecondaryPersistenceCallback::set: vb:0: different state for key:<ud>cid:0x0:key</ud> primary:0 secondary:3 purgeSeqno:0
unknown file: error: C++ exception with description "NexusKVStoreSecondaryPersistenceCallback::set: vb:0: different state for key:<ud>cid:0x0:key</ud> primary:0 secondary:3 purgeSeqno:0" thrown in the test body.
[  FAILED  ] FullAndvalueEviction/EPBucketTest.GetNonResidentCompressed/persistent_nexus_magma_couchstore_value_only, where GetParam() = ("persistent_nexus_magma_couchstore", "value_only") (77 ms)
FullAndvalueEviction/EPBucketTest.GetNonResidentCompressed/persistent_nexus_magma_couchstore_value_only
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43817/ )

Timeout of a CTest test 421/421 Test #270: ep_testsuite.value_eviction.comp_passive ......................................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43817/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25653/ : FAILURE

Failure of GoogleTest "TransportProtocols/XattrTest.mb25928_SystemCanExceedDocumentLimit/Mcbp_XattrYes_JsonNo_SnappyYes":

<pre>
[ RUN      ] TransportProtocols/XattrTest.mb25928_SystemCanExceedDocumentLimit/Mcbp_XattrYes_JsonNo_SnappyYes
[2022-02-11T08:10:56.800Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/tests/testapp/testapp_xattr.cc:1916: Failure
[2022-02-11T08:10:56.800Z] Value of: resp.isSuccess()
[2022-02-11T08:10:56.800Z]   Actual: false
[2022-02-11T08:10:56.800Z] Expected: true
[2022-02-11T08:10:56.800Z] Expected to be able to store system xattrs
[2022-02-11T08:10:56.800Z] [  FAILED  ] TransportProtocols/XattrTest.mb25928_SystemCanExceedDocumentLimit/Mcbp_XattrYes_JsonNo_SnappyYes, where GetParam() = (Mcbp, XattrYes, 4-byte object <01-00 00-00>, 4-byte object <00-00 00-00>) (392 ms)
TransportProtocols/XattrTest.mb25928_SystemCanExceedDocumentLimit/Mcbp_XattrYes_JsonNo_SnappyYes
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25653/ )

Timeout of a CTest test [2022-02-11T08:16:46.446Z] 423/423 Test  #89: ep-engine_ep_unit_tests.ExecutorPoolEpEngineTest/FollyExecutorPool ..........................................} ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25653/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14353/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36947/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5220/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5159/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17553/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18287/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17248/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16328/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
